[feat]PMA-46: correct horizontal scroll when min-size

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,10 +2,13 @@
 
 .auth-header + .content {
   padding-top: $header-default-height;
+  height: calc(100vh - $header-default-height - $footer-height);
 }
 .content {
-  height: calc(100vh - $header-default-height - $footer-height);
-  max-width: 1200px;
+  box-sizing: border-box;
+  height: calc(100vh - $footer-height);
+  max-width: $content-width;
+  min-width: $min-mobile-width;
   padding: 0px $wrapper-1200-padding;
   margin: 0 auto;
 }
